    storing a Web_xxmp.bak copy; xxm.json)
    This may cause incompatibilities if different xxm versions are required to
    coexist on the same installation(s).
    This procedure (and all code using XML) is scheduled to be removed at a
    later, currently undetermined, version.
- fixed issue with custom parserValues spilling into next file processed

v1.2.4.430
- xxmISAPI: fixed issue with open connections not accepting new requests

v1.2.4.424
- revised context object lifetime management (lock-less reference counting)
- demo 7 "Resources": added "If-Modified-Since"
- demo 12 "Long Polling": added example EventSource (text/event-stream)

v1.2.3.408
- WebSocket support (only xxmHttp,xxmSyna,xxmAhttpd,xxmHost)
- SCGI handler: xxmSCGI*
- serve handler's icon for "/favicon.ico" (project registry override)
- fixed file handle leak on serving 304 responses on static files
- fixed issue with XXL's that require DLL's in same folder
- fixed issue with non-latin encoded compiler error messages
- fixed issue with non-latin encoded uploaded file name
- fixed issue with IP-addresses
- xxmAhttpd: Apache 2.4 support (no longer supports 2.2!)

v1.2.2.369
- error page: back link when referer, refresh link only on GET
- LoadCopy by library file signature to avoid multiple copies being loaded, retries on access denied
- default xxmSession on TStringList (sorted!) instead of TObjectList
- parser: in code, treat lines that start with "<" and end with ">" as HTML,
  allow [[#]] section on one line in a code section
- recycle allocated memory buffers, use HeapAlloc instead of GlobalAlloc
- long polling support (IXxmContextSuspend, IXxmProjectEvents2)
- xxmHttp: thread to wait on groups of (slow) connections that have all content in buffer
- xxmHttp: support basic authentication (401, "WWW-Authenticate: Basic")
- xxmIsapi: asynchronous sending on more than 64KiB in buffer (project should set Context.ContentBuffer!)
- xxmLocal: custom handling of WWW-Authenticate,