@@ -19,5 +19,8 @@
 
 <p><a href="https://sourceforge.net/projects/xxm/files/">sourceforge.net/projects/xxm/files</a></p>
 
+<p>Or build straight from the source:<br />
+<a href="https://github.com/stijnsanders/xxm">github.com/stijnsanders/xxm</a></p>
+
 </body>
 </html>
